--- a/app/src/main/res/layout/activity_order_menu_page.xml
+++ b/app/src/main/res/layout/activity_order_menu_page.xml
@@ -29,6 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/left_arrow"
+        android:onClick="backButton"
         app:itemRippleColor="#C1C1C1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,20 +47,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/nav_background_curved"
-        app:itemIconTint="@color/icons_color"
-        app:itemRippleColor="#C1C1C1"
-        app:itemTextColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/navigation_items">
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <TextView
         android:id="@+id/MenuRedBox"
@@ -99,6 +86,7 @@
         android:background="@drawable/createbutton"
         android:fontFamily="@font/sofia_regular"
         android:text="Add to Cart"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintEnd_toEndOf="@+id/MenuWhiteBox"
@@ -114,6 +102,7 @@
         android:background="@drawable/createbutton"
         android:fontFamily="@font/sofia_regular"
         android:text="Nutrition"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/MenuWhiteBox"
@@ -137,8 +126,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/drinkCircle"
-            android:layout_width="115dp"
-            android:layout_height="94dp"
+            android:layout_width="107dp"
+            android:layout_height="103dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -151,34 +140,35 @@
 
         <TextView
             android:id="@+id/drinkDescription"
-            android:layout_width="152dp"
-            android:layout_height="30dp"
+            android:layout_width="173dp"
+            android:layout_height="28dp"
             android:fontFamily="@font/sofia_regular"
             android:text="Description"
             android:textColor="#B9FFFFFF"
-            android:textSize="16dp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.476"
+            app:layout_constraintHorizontal_bias="0.666"
             app:layout_constraintStart_toEndOf="@+id/drinkCircle"
             app:layout_constraintTop_toBottomOf="@+id/drinkText"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/drinkText"
-            android:layout_width="153dp"
-            android:layout_height="35dp"
+            android:layout_width="176dp"
+            android:layout_height="36dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/sofia_regular"
             android:text="Drink Name"
             android:textColor="@color/white"
-            android:textSize="28dp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.484"
+            app:layout_constraintHorizontal_bias="0.727"
             app:layout_constraintStart_toEndOf="@+id/drinkCircle"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.509" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
