--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -11,7 +11,7 @@
         android:background="#00974D4D">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/menu_item_image"
+            android:id="@+id/cart_item_image"
             android:layout_width="97dp"
             android:layout_height="91dp"
             android:layout_alignParentStart="true"
@@ -29,7 +29,7 @@
             app:srcCompat="@drawable/latte_circle" />
 
         <TextView
-            android:id="@+id/menu_item_name"
+            android:id="@+id/cart_item_name"
             android:layout_width="210dp"
             android:layout_height="52dp"
             android:layout_alignParentTop="true"
@@ -39,7 +39,7 @@
             android:layout_marginTop="45dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="28dp"
-            android:layout_toEndOf="@+id/menu_item_image"
+            android:layout_toEndOf="@+id/cart_item_image"
             android:fontFamily="@font/sofia_regular"
             android:text="Item Name"
             android:textColor="@color/white"
