Updated linkage between CartPageActivity and paymentActivity

--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -80,17 +80,24 @@
 
     <Button
         android:id="@+id/placeOrderButton"
-        android:layout_width="264dp"
-        android:layout_height="48dp"
-        android:background="@drawable/createbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
         android:fontFamily="@font/sofia_regular"
-        android:text="Place Order"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:foreground="@drawable/ripple_grayc1c1"
+        android:letterSpacing="0.25"
+        android:onClick="paymentPageButton"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="  Confirm Wallet  "
+        android:textColor="#FFFFFF"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/menuWhiteBox"
         app:layout_constraintEnd_toEndOf="@+id/menuWhiteBox"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/menuWhiteBox"
         app:layout_constraintTop_toTopOf="@+id/menuWhiteBox" />
 
