--- a/app/src/main/res/layout/review_order_item.xml
+++ b/app/src/main/res/layout/review_order_item.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="365dp"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="#00FFFFFF">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:cardBackgroundColor="#00FFFFFF"
+    android:id="@+id/cardView">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00974D4D">
+        android:id="@+id/relativeLayout2"
+        android:layout_width="409dp"
+        android:layout_height="251dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="#00974D4D"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="220dp"
+        tools:layout_conversion_absoluteWidth="365dp">
 
         <ScrollView
             android:layout_width="211dp"
@@ -82,5 +93,40 @@
             android:textColor="#C9FFFFFF"
             android:textSize="14sp" />
 
+        <TextView
+            android:id="@+id/fowardArrow"
+            android:layout_width="36dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="330dp"
+            android:background="@drawable/right_arrow"
+            android:foreground="@drawable/ripple"
+            android:onClick="settingsPage"
+            app:itemRippleColor="#C1C1C1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </RelativeLayout>
-</androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/paymentbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
+        android:letterSpacing="0.25"
+        android:onClick="paymentPageButton"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="  Confirm Wallet  "
+        android:textColor="#FFFFFF"
+        app:backgroundTint="@color/red_ec"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
