--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -92,7 +92,7 @@
         android:paddingTop="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
-        android:text="  Confirm Wallet  "
+        android:text="  Confirm Payment  "
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/menuWhiteBox"
@@ -108,6 +108,20 @@
         app:layout_constraintEnd_toEndOf="@+id/menuRedBox2"
         app:layout_constraintStart_toStartOf="@+id/menuRedBox2"
         app:layout_constraintTop_toTopOf="@+id/menuRedBox2" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/nav_background_curved"
+        app:itemIconTint="@color/icons_color"
+        app:itemRippleColor="#C1C1C1"
+        app:itemTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation_items">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
