--- a/app/src/main/res/layout/activity_customer_support_page.xml
+++ b/app/src/main/res/layout/activity_customer_support_page.xml
@@ -63,4 +63,40 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
+    <TextView
+        android:id="@+id/MenuRedBox"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="200dp"
+        android:background="@drawable/support_red_box"
+        android:fontFamily="sans-serif-thin"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="100sp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topMessage2"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/sofia_regular"
+        android:text="CarolinaCoffeeApp@gmail.com"
+        android:textAllCaps="false"
+        android:textColor="#C1C1C1"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        app:layout_constraintBottom_toBottomOf="@+id/MenuRedBox"
+        app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
+        app:layout_constraintStart_toStartOf="@+id/MenuRedBox"
+        app:layout_constraintTop_toTopOf="@+id/MenuRedBox" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
