--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -237,34 +237,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/nav_background_curved"
-        app:menu="@menu/navigation_items"
+        app:itemIconTint="@color/icons_color"
         app:itemRippleColor="#C1C1C1"
         app:itemTextColor="@color/black"
-        app:itemIconTint="@color/icons_color"
-        app:layout_constraintBottom_toBottomOf="parent" >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation_items">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
@@ -292,12 +275,14 @@
 
     <Button
         android:id="@+id/LogOutButton"
-        android:fontFamily="@font/sofia_regular"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/profile_page_all_curved_corners_red"
+        android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
         android:letterSpacing="0.25"
+        android:onClick="logout"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
@@ -306,11 +291,35 @@
         android:text="  Sign Out  "
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:onClick="logout"
-        android:foreground="@drawable/ripple_grayc1c1"
         app:backgroundTint="@color/red_ec"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/WhiteBox1" />
+
+    <Button
+        android:id="@+id/Deactivate_Account"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
+        android:letterSpacing="0.25"
+        android:onClick="confirmDeactivation"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="  Deactivate Account  "
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        app:backgroundTint="@color/red_ec"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LogOutButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
