Cart now displaying items in it. Delete from cart and additions added ASAP.

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -54,13 +54,14 @@
         android:id="@+id/menuRecycler"
         android:layout_width="365dp"
         android:layout_height="450dp"
-        android:layout_marginBottom="71dp"
         android:scrollbars="vertical"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintBottom_toBottomOf="@+id/menuRedBox"
         app:layout_constraintEnd_toEndOf="@+id/menuRedBox"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/menuRedBox"
-        app:layout_constraintTop_toTopOf="@+id/menuRedBox"></androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toTopOf="@+id/menuRedBox"
+        app:layout_constraintVertical_bias="1.0"></androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
