--- a/app/src/main/res/layout/review_order_item.xml
+++ b/app/src/main/res/layout/review_order_item.xml
@@ -2,33 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardBackgroundColor="#00FFFFFF"
-    android:id="@+id/cardView">
+    android:id="@+id/cardView"
+    android:layout_width="350dp"
+    android:layout_height="150dp"
+    android:background="#11353232"
+    android:elevation="2dp"
+    android:padding="4dp"
+    app:cardBackgroundColor="#00FFFFFF">
 
     <RelativeLayout
         android:id="@+id/relativeLayout2"
-        android:layout_width="409dp"
-        android:layout_height="251dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="359dp"
+        android:layout_height="151dp"
+        android:layout_marginTop="4dp"
         android:background="#00974D4D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_conversion_absoluteHeight="220dp"
-        tools:layout_conversion_absoluteWidth="365dp">
+        app:layout_constraintTop_toTopOf="parent">
+
 
         <ScrollView
-            android:layout_width="211dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="-2dp"
-            android:layout_marginBottom="94dp">
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_below="@+id/cart_item_price"
+            android:layout_marginLeft="32dp"
+            android:layout_marginBottom="9dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/cart_item_addons"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/sofia_regular"
                     android:text="Add Ons Listed"
@@ -46,47 +44,13 @@
             </LinearLayout>
         </ScrollView>
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/cart_item_image"
-            android:layout_width="92dp"
-            android:layout_height="94dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.136"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.23"
-            app:srcCompat="@drawable/latte_circle" />
-
-        <TextView
-            android:id="@+id/cart_item_name"
-            android:layout_width="207dp"
-            android:layout_height="43dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="23dp"
-            android:layout_marginEnd="19dp"
-            android:layout_marginBottom="153dp"
-            android:layout_toEndOf="@+id/cart_item_image"
-            android:fontFamily="@font/sofia_regular"
-            android:text="Item Name"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
         <TextView
             android:id="@+id/cart_item_price"
             android:layout_width="194dp"
             android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="34dp"
-            android:layout_marginTop="55dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="125dp"
-            android:layout_toEndOf="@+id/cart_item_image"
+            android:layout_below="@+id/cart_item_name"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/sofia_regular"
             android:text="Price"
             android:textAlignment="textStart"
@@ -94,39 +58,16 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/fowardArrow"
-            android:layout_width="36dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="330dp"
-            android:background="@drawable/right_arrow"
-            android:foreground="@drawable/ripple"
-            android:onClick="settingsPage"
-            app:itemRippleColor="#C1C1C1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/cart_item_name"
+            android:layout_width="345dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/sofia_regular"
+            android:text="Item Name"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/paymentbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/profile_page_all_curved_corners_red"
-        android:fontFamily="@font/sofia_regular"
-        android:foreground="@drawable/ripple_grayc1c1"
-        android:letterSpacing="0.25"
-        android:onClick="paymentPageButton"
-        android:paddingStart="0dp"
-        android:paddingLeft="0dp"
-        android:paddingTop="0dp"
-        android:paddingEnd="0dp"
-        android:paddingBottom="0dp"
-        android:text="  Confirm Wallet  "
-        android:textColor="#FFFFFF"
-        app:backgroundTint="@color/red_ec"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
