--- a/app/src/main/res/layout/activity_app_settings_page.xml
+++ b/app/src/main/res/layout/activity_app_settings_page.xml
@@ -332,10 +332,11 @@
         app:layout_constraintVertical_bias="0.975" />
 
     <Switch
-        android:id="@+id/biometrics_switch3"
+        android:id="@+id/biometrics_switch"
         android:layout_width="106dp"
         android:layout_height="41dp"
         android:layout_marginEnd="8dp"
+        android:onClick="biometric_scanner_switch"
         app:layout_constraintBottom_toBottomOf="@+id/biometric_text_box"
         app:layout_constraintEnd_toEndOf="@+id/biometric_text_box"
         app:layout_constraintTop_toTopOf="@+id/biometric_text_box" />
