--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -19,6 +19,7 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
+        android:inputType="textCapWords|textCapSentences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +54,7 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +89,7 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
+        android:maxLength="14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
