--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,7 @@
         android:ems="10"
         android:fontFamily="@font/sofia_regular"
         android:hint="Full Name"
-        android:inputType="textPersonName"
+        android:inputType="textCapWords|textCapSentences"
         android:padding="10dp"
         android:textColor="#808080"
         android:textColorHint="#808080"
@@ -116,10 +116,12 @@
         android:fontFamily="@font/sofia_regular"
         android:hint="Phone Number (Optional)"
         android:inputType="phone"
+        android:maxLength="14"
         android:padding="10dp"
         android:textColor="#808080"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
