--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -49,6 +49,7 @@
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topMessage4" />
 
@@ -69,21 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/topMessage4" />
 
 
-    <com.craftman.cardform.CardForm
-        android:id="@+id/card_form"
-        android:layout_width="0dp"
-        android:layout_height="550dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topMessage4" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -98,6 +85,67 @@
         app:layout_constraintBottom_toBottomOf="parent" >
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="First Name "
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="375dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Last Name "
+        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteY="421dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Card Number "
+        android:inputType=""
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="468dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber2"
+        android:layout_width="109dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:text="Exp:"
+        android:inputType=""
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber3"
+        android:layout_width="93dp"
+        android:layout_height="38dp"
+        android:ems="10"
+        android:text="CCV:"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="196dp"
+        tools:layout_editor_absoluteY="513dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Zip Code"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="50dp"
+        tools:layout_editor_absoluteY="557dp" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
