BIG update: - Reworked home navigation button and formatting. - Added several new pages corresponding to customer payment plans - Currently working on implementing ability to store card information on fire base (not done yet) - implementing ability for users to delete their card information from firebase (in progress)
TODO:
Replace mailbox icon inside the navigation_items.xml to a proper shopping cart or bag icon.

--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/payPageButton"
-        android:icon="@drawable/greywallet"
+        android:icon="@drawable/mail"
         android:title="Pay"/>
 
     <item
