--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:background="@drawable/settingpagebackground"
-    tools:context="com.example.carolina_coffee.PaymentActivity">
+    tools:context="com.example.carolina_coffee.PaymentActivity_1">
 
     <TextView
         android:id="@+id/topMessage4"
@@ -90,11 +90,12 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="First Name "
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="375dp" />
+        app:layout_constraintStart_toStartOf="@+id/WalletArtCover"
+        app:layout_constraintTop_toBottomOf="@+id/WalletArtCover" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
@@ -103,49 +104,49 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Last Name "
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="421dp" />
+        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <EditText
         android:id="@+id/editTextNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="Card Number "
         android:inputType=""
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="468dp" />
+        android:text="Card Number "
+        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="109dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:text="Exp:"
         android:inputType=""
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="511dp" />
+        android:text="Exp:"
+        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
 
     <EditText
         android:id="@+id/editTextNumber3"
         android:layout_width="93dp"
         android:layout_height="38dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
-        android:text="CCV:"
         android:inputType="number"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="513dp" />
+        android:text="CCV:"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
 
     <EditText
         android:id="@+id/editTextNumber4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="Zip Code"
         android:inputType="number"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="557dp" />
-
+        android:text="Zip Code"
+        app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
