--- a/app/src/main/res/layout/activity_setting_page.xml
+++ b/app/src/main/res/layout/activity_setting_page.xml
@@ -169,7 +169,7 @@
 
 
             <ImageView
-                android:id="@+id/credit_card_icon"
+                android:id="@+id/card_icon_2"
                 android:layout_width="35dp"
                 android:layout_height="33dp"
                 android:layout_marginStart="4dp"
@@ -179,7 +179,7 @@
                 app:srcCompat="@drawable/credit_card_icon" />
 
             <ImageView
-                android:id="@+id/history_icon"
+                android:id="@+id/card_icon_1"
                 android:layout_width="34dp"
                 android:layout_height="36dp"
                 android:layout_marginStart="4dp"
@@ -189,7 +189,7 @@
                 app:srcCompat="@drawable/history_icon" />
 
             <ImageView
-                android:id="@+id/historyRightArrow"
+                android:id="@+id/card_arrow_1"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="16dp"
@@ -201,7 +201,7 @@
                 app:srcCompat="@drawable/right_arrow" />
 
             <ImageView
-                android:id="@+id/paymentPlansRightArrow"
+                android:id="@+id/card_arrow_2"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="16dp"
@@ -214,7 +214,7 @@
                 app:srcCompat="@drawable/right_arrow" />
 
             <TextView
-                android:id="@+id/history_message_box"
+                android:id="@+id/card_ending_1"
                 android:layout_width="0dp"
                 android:layout_height="26dp"
                 android:fontFamily="@font/sofia_regular"
@@ -227,7 +227,7 @@
                 app:layout_constraintStart_toStartOf="@+id/top_History_White_Curved_Box" />
 
             <TextView
-                android:id="@+id/paymentPlansMessageBox"
+                android:id="@+id/card_ending_2"
                 android:layout_width="0dp"
                 android:layout_height="26dp"
                 android:fontFamily="@font/sofia_regular"
